    . [#1273] Build error in visp_java without deprecated functionalities
    . [#1274] Build issue no member named clamp in namespace std
    . [#1279] Issue in vpPoseVector json serialization
    . [#1296] Unable to parse camera parameters with vpXmlParserCamera::parse() when camera name is empty
----------------------------------------------
ViSP 3.6.0 (released September 22, 2023)
  - Contributors:
    . Fabien Spindler, Souriya Trinh, Romain Lagneau, Antonio Marino, Samuel Felton,
      Francois Chaumette, Olivier Roussel, Julien Dufour, Joudy Nader
  - New classes
    . vpMocapVicon an interface over Vicon motion capture system
    . vpMocapQualisys an interface over Qualisys motion capture system
    . vpPclViewer that enables real time plotting of 3D point clouds based on PCL library
    . vpRobotUniversalRobots that allows to control an Universal Robots robot
    . vpRobotMavsdk that allows to control a robot equipped with a Pixhawk (drone, rover...)
    . vpDetectorDNNOpenCV a wrapper over the OpenCV DNN module that allows
      to detect objects using Faster-RCNN, SSD-MobileNet, ResNet 10, Yolo v3, Yolo v4,
      Yolo v5, Yolo v7 and Yolo v8 convolutional networks
    . vpImageCircle that refers to a 2D circle in an image
    . vpCircleHoughTransform that allows to detect circles in an image
    . vpCannyEdgeDetection that allows to detect Canny edges without using OpenCV
    . vpMegaPose and vpMegaPoseTracker classes that are wrapper over MegaPose
      https://megapose6d.github.io/ that allows 6D pose estimation using a DNN approach
  - New features and improvements
    . Video writer is now able to create the output folder recursively (see vpVideoWriter)
    . New image-based and position-based examples with UR robot
    . Tutorial for extrinsic calibration improved with UR robot and Panda robot use cases
    . Tutorials in tutorial/grabber folder have now a new --no-display command line option
      that allows to grab a video remotely